--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-helmet-async": "^2.0.4",
     "react-icons": "^5.5.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
@@ -36,7 +37,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build && npm run generate-seo",
-    "test": "react-scripts test", 
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "css:modules": "npx postcss \"src/**/styles.module.css\" --base src --dir dist",
     "css:watch": "npx postcss \"src/**/styles.module.css\" --base src --dir dist --watch",
@@ -44,7 +45,7 @@
     "deploy": "npm run build && npx firebase-tools deploy --only hosting",
     "deploy:prod": "npm run build && npx firebase-tools deploy --only hosting --project production",
     "generate-seo": "node scripts/generate-sitemap.js"
-  },  
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
